tests/ParserTests/Good/Good06.hpr
module A where
a :: B.C -> D.E
