tests/ParserTests/Bad/Bad07.hpr
module A where
foo :: A.b -> A
